[package]
name = "fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
calamine = "0.27.0"
serde = { version = "1.0.213", features = ["derive"] }
rtf2pdf = { path = "../rtf2pdf" }
serde_json = "1.0.132"
nanoid = "0.4.0"
sha2 = "0.10.8"
lopdf = "0.34.0"
tera = "1.20.0"
headless_chrome = "1.0.15"
regex = "1.11.1"
once_cell = "1.20.2"


[[test]]
name = "intergration"
path = "tests/tests.rs"
